--- a/springbootlearn/src/main/resources/templates/success.html
+++ b/springbootlearn/src/main/resources/templates/success.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
     <title>Title</title>
 </head>
 <body>
-    <div th:utext="${payUrl}">
+    <div>
+        支付成功
     </div>
 </body>
 </html>
